dep-ser/fb-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nandeesh151/frontend_recipe2  
          ports:
            - containerPort: 3000  
          # env:
          #   - name: REACT_APP_API_URL 
          #     value: "http://backend:8000"  
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  
    service.beta.kubernetes.io/aws-load-balancer-target-type: "instance"  
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"  
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 80 
  type: LoadBalancer
