dep-ser/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80 # Exposes port 80 externally for the frontend
      targetPort: 3000  # The port inside the frontend container
  type: LoadBalancer
